--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 MONGO_URI=mongodb+srv://Rohitkumawat1981:xMecyDAkrMK76gOS@cluster0.1evxw1m.mongodb.net/FitnessApp?retryWrites=true&w=majority&appName=Cluster0
 FRONTEND_URL=http://localhost:5173
 LOCAL_URL=http://127.0.0.1:5500
-DEPLOYED_FRONTEND_URL=https://e-commerce-aping-node-js-1.onrender.com
+BACKEND_URL=https://tinder-731x-backend.onrender.com  
 PORT=4000
 JWT_SECRET=nbcfduyg766756e678uiohvvbcxfddytgjh
 
