--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 MONGO_URI=mongodb+srv://Rohitkumawat1981:xMecyDAkrMK76gOS@cluster0.1evxw1m.mongodb.net/FitnessApp?retryWrites=true&w=majority&appName=Cluster0
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://tinder-731x.onrender.com
 LOCAL_URL=http://127.0.0.1:5500
 BACKEND_URL=https://tinder-731x.onrender.com 
 PORT=4000
