--- a/backend/.env
+++ b/backend/.env
@@ -1,13 +1,8 @@
 MONGO_URI=mongodb+srv://Rohitkumawat1981:xMecyDAkrMK76gOS@cluster0.1evxw1m.mongodb.net/FitnessApp?retryWrites=true&w=majority&appName=Cluster0
-FRONTEND_URL=https://tinder-731x.onrender.com
-LOCAL_URL=http://127.0.0.1:5500
-BACKEND_URL=https://tinder-731x.onrender.com 
+FRONTEND_URL=http://localhost:5173
+BaCKEND_URL=https://tinder-731x.onrender.com
 PORT=4000
 JWT_SECRET=nbcfduyg766756e678uiohvvbcxfddytgjh
-
-
-VERCEL_URL=https://mern-ecommerce-typescript.vercel.app
-
 CLOUDINARY_CLOUD_NAME=ddrby6aug
 CLOUDINARY_API_KEY=772295378165634
 CLOUDINARY_API_SECRET=LYeAkHjPXQ5039llLWooUyB7mzY
